@@ -2,39 +2,37 @@ package calculator.bool;
 
 import calculator.IllegalConstruction;
 import calculator.numbers.Expression;
-import calculator.numbers.MyNotANumber;
+import calculator.numbers.MyBool;
 import calculator.numbers.MyNumber;
-import calculator.operators.boolean_operators.And;
+import calculator.operators.boolean_operators.Not;
 import calculator.operators.boolean_operators.Or;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.io.ByteArrayOutputStream;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.logging.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-class TestAnd {
+class TestNot {
 
     private final int value1 = 0;
-    private final int value2 = 1;
-    private And op;
+    private Not op;
     private List<Expression> params;
 
     @BeforeEach
     void setUp(){
-        params = new ArrayList<>(Arrays.asList(new MyNumber(value1),new MyNumber(value2)));
-        try { op = new And(params); }
+        params = new ArrayList<>(List.of(new MyNumber(value1)));
+        try { op = new Not(params); }
         catch(IllegalConstruction e) { fail(); }
     }
 
     @Test
     void testConstructor1() {
         // It should not be possible to create an And expression without null parameter list
-        assertThrows(IllegalConstruction.class, () -> op = new And(null));
+        assertThrows(IllegalConstruction.class, () -> op = new Not(null));
     }
 
     @SuppressWarnings("AssertBetweenInconvertibleTypes")
@@ -50,12 +48,12 @@ class TestAnd {
     @Test
     void testEquals() {
         // Two similar expressions, constructed separately (and using different constructors) should be equal
-        ArrayList<Expression> p = new ArrayList<>(Arrays.asList(new MyNumber(value1), new MyNumber(value2)));
+        ArrayList<Expression> p = new ArrayList<>(List.of(new MyNumber(value1)));
         try {
-            And e = new And(p);
+            Not e = new Not(p);
             assertEquals(op, e);
             assertEquals(e, e);
-            assertNotEquals(e, new And(new ArrayList<>(Arrays.asList(new MyNumber(0), new MyNumber(0)))));
+            assertNotEquals(e, new Not(new ArrayList<>(List.of(new MyNumber(1)))));
         }
         catch(IllegalConstruction e) { fail(); }
     }
@@ -69,9 +67,9 @@ class TestAnd {
     @Test
     void testHashCode() {
         // Two similar expressions, constructed separately (and using different constructors) should have the same hashcode
-        ArrayList<Expression> p = new ArrayList<>(Arrays.asList(new MyNumber(value1), new MyNumber(value2)));
+        ArrayList<Expression> p = new ArrayList<>(List.of(new MyNumber(value1)));
         try {
-            And e = new And(p);
+            Not e = new Not(p);
             assertEquals(e.hashCode(), op.hashCode());
         }
         catch(IllegalConstruction e) { fail(); }
@@ -80,25 +78,12 @@ class TestAnd {
     @Test
     void testNullParamList() {
         params = null;
-        assertThrows(IllegalConstruction.class, () -> op = new And(params));
-    }
-
-    @Test
-    void testInvalidNumber(){
-        try {
-            ArrayList<Expression> p = new ArrayList<>(Arrays.asList(new MyNumber(value1), new MyNumber(4)));
-            And and = new And(p);
-            Expression expression = and.op(new MyNumber(value1), new MyNumber(4));
-            assertEquals(MyNotANumber.class, expression.getClass());
-        }
-        catch (IllegalConstruction e){
-            fail();
-        }
+        assertThrows(IllegalConstruction.class, () -> op = new Not(params));
     }
 
     @Test
     void testLogMessageIsSent() {
-        Logger logger = Logger.getLogger(And.class.getName());
+        Logger logger = Logger.getLogger(Not.class.getName());
 
         Formatter formatter = new SimpleFormatter();
         ByteArrayOutputStream out = new ByteArrayOutputStream();
@@ -106,17 +91,18 @@ class TestAnd {
         logger.addHandler(handler);
 
         try {
-            And instance = new And(new ArrayList<>());
-            instance.op(new MyNumber(4), new MyNumber(1));
+            Not instance = new Not(new ArrayList<>());
+            instance.op(new MyBool(0), new MyBool(1));
             handler.flush();
             String logMsg = out.toString();
             assertNotNull(logMsg);
-            assertTrue(logMsg.contains("Invalid number entered. Number should be either 0 or 1."));
+            assertTrue(logMsg.contains("Not is an unary operator, keeping only the first number"));
         }
-        catch (IllegalConstruction e) {
+        catch (IllegalConstruction | MyBool.InvalidNumberException e) {
             fail();
         } finally {
             logger.removeHandler(handler);
         }
     }
 }
+
